--- a/JFClassifier.ipynb
+++ b/JFClassifier.ipynb
@@ -15,7 +15,8 @@
     "from torch.utils.data import DataLoader, random_split\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "from torchvision import models"
    ]
   },
   {
@@ -27,13 +28,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using device:  cuda\n"
+      "Using device: cuda\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print (\"using device: \",device)"
+    "print(\"Using device:\", device)"
    ]
   },
   {
@@ -42,37 +43,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = \"./JellyFish\""
+    "DATA_DIR = \"./jellyfish_images\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
-    "    transforms.Resize((128, 128)),\n",
+    "    transforms.Resize((224, 224)),  \n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomRotation(10),\n",
     "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.1),\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize([0.5], [0.5])\n",
-    "])\n"
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]) \n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dataset = datasets.ImageFolder(root=DATA_DIR, transform=transform)"
+    "full_dataset = datasets.ImageFolder(root=DATA_DIR, transform=transform)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,47 +112,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/s5722127/.pyenv/versions/anaconda3-2024.06-1/lib/python3.12/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/s5722127/.pyenv/versions/anaconda3-2024.06-1/lib/python3.12/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
-    "class CNNModel(nn.Module) : \n",
-    "    def __init__(self, num_classes):\n",
-    "        super(CNNModel, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1)\n",
-    "        self.relu1 = nn.ReLU()\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
-    "        self.relu2 = nn.ReLU()\n",
-    "        self.fc1 = nn.Linear(64 * 32 * 32, 128)\n",
-    "        self.relu3 = nn.ReLU()\n",
-    "        self.fc2 = nn.Linear(128, num_classes)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(self.relu1(self.conv1(x)))\n",
-    "        x = self.pool(self.relu2(self.conv2(x)))\n",
-    "        x = x.view(x.size(0), -1)\n",
-    "        x = self.relu3(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
-    "        return x"
+    "model = models.resnet18(pretrained=True)\n",
+    "num_features = model.fc.in_features  \n",
+    "model.fc = nn.Linear(num_features, len(class_names)) \n",
+    "model = model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_classes=len(class_names)\n",
-    "model = CNNModel(num_classes).to(device)\n",
-    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr = 0.001)"
+    "optimizer = optim.Adam(model.fc.parameters(), lr=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,28 +194,28 @@
     "        \n",
     "        print(f\"Epoch {epoch+1}/{num_epochs}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.2f}%\")\n",
     "    \n",
-    "    torch.save(model.state_dict(), \"jellyfish_classifier.pth\")"
+    "    torch.save(model.state_dict(), \"jellyfish_classifier_resnet18.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10, Train Loss: 0.0002, Val Loss: 1.6920, Val Acc: 71.11%\n",
-      "Epoch 2/10, Train Loss: 0.0002, Val Loss: 1.7006, Val Acc: 71.11%\n",
-      "Epoch 3/10, Train Loss: 0.0002, Val Loss: 1.7059, Val Acc: 71.11%\n",
-      "Epoch 4/10, Train Loss: 0.0002, Val Loss: 1.7107, Val Acc: 71.11%\n",
-      "Epoch 5/10, Train Loss: 0.0002, Val Loss: 1.7191, Val Acc: 71.11%\n",
-      "Epoch 6/10, Train Loss: 0.0002, Val Loss: 1.7221, Val Acc: 71.11%\n",
-      "Epoch 7/10, Train Loss: 0.0002, Val Loss: 1.7331, Val Acc: 71.11%\n",
-      "Epoch 8/10, Train Loss: 0.0002, Val Loss: 1.7355, Val Acc: 71.11%\n",
-      "Epoch 9/10, Train Loss: 0.0001, Val Loss: 1.7415, Val Acc: 71.11%\n",
-      "Epoch 10/10, Train Loss: 0.0001, Val Loss: 1.7427, Val Acc: 71.11%\n"
+      "Epoch 1/10, Train Loss: 1.7997, Val Loss: 1.4408, Val Acc: 51.11%\n",
+      "Epoch 2/10, Train Loss: 1.2657, Val Loss: 1.1647, Val Acc: 59.44%\n",
+      "Epoch 3/10, Train Loss: 1.0228, Val Loss: 1.0347, Val Acc: 68.89%\n",
+      "Epoch 4/10, Train Loss: 0.9010, Val Loss: 0.8369, Val Acc: 74.44%\n",
+      "Epoch 5/10, Train Loss: 0.7680, Val Loss: 0.7900, Val Acc: 75.00%\n",
+      "Epoch 6/10, Train Loss: 0.7032, Val Loss: 0.7349, Val Acc: 78.33%\n",
+      "Epoch 7/10, Train Loss: 0.6364, Val Loss: 0.7168, Val Acc: 77.78%\n",
+      "Epoch 8/10, Train Loss: 0.5932, Val Loss: 0.6632, Val Acc: 77.78%\n",
+      "Epoch 9/10, Train Loss: 0.5447, Val Loss: 0.6342, Val Acc: 80.00%\n",
+      "Epoch 10/10, Train Loss: 0.5193, Val Loss: 0.6231, Val Acc: 81.11%\n"
      ]
     }
    ],
@@ -231,32 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6606/997334184.py:3: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"jellyfish_classifier.pth\"))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_model():\n",
-    "    model = CNNModel(num_classes)\n",
-    "    model.load_state_dict(torch.load(\"jellyfish_classifier.pth\"))\n",
+    "    model = models.resnet18()\n",
+    "    model.fc = nn.Linear(num_features, len(class_names))\n",
+    "    model.load_state_dict(torch.load(\"jellyfish_classifier_resnet18.pth\"))\n",
     "    model.to(device)\n",
     "    model.eval()\n",
-    "    return model\n",
-    "\n",
-    "model = load_model()"
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,37 +249,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict_image(image_path, model):\n",
-    "    image = Image.open(image_path)\n",
-    "    image = transform(image).convert(\"RGB\")\n",
-    "    image = image.unsqueeze(0).to(device)\n",
+    "    image = Image.open(image_path).convert(\"RGB\")  \n",
+    "    image = transform(image)  \n",
+    "    image = image.unsqueeze(0).to(device) \n",
+    "\n",
     "    with torch.no_grad():\n",
     "        output = model(image)\n",
     "        _, predicted = torch.max(output, 1)\n",
-    "    return class_names[predicted.item()]\n"
+    "    \n",
+    "    return class_names[predicted.item()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Class: compass_jellyfish\n"
+      "Predicted Class: lions_mane_jellyfish\n"
      ]
     }
    ],
    "source": [
-    "sample_image = \"./JellyFish/lions_mane_jellyfish/29.jpg\"\n",
+    "sample_image = \"./jellyfish_images/lions_mane_jellyfish/29.jpg\"\n",
     "prediction = predict_image(sample_image, model)\n",
-    "print(\"Predicted Class:\", prediction)\n"
+    "print(\"Predicted Class:\", prediction)"
    ]
   },
   {
